--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$navagitionUiKtxVersion"
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitGsonConverterVersion"
+    implementation "androidx.room:room-runtime:$androidxRoomVersion"
+    annotationProcessor "androidx.room:room-compiler:$androidxRoomVersion"
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$androixTestExtVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidXtestExpressoVersion"
