--- a/build.gradle
+++ b/build.gradle
@@ -21,4 +21,5 @@ ext {
     junitVersion = "4.13.2"
     androixTestExtVersion = "1.1.3"
     androidXtestExpressoVersion = "3.4.0"
+    androidxRoomVersion = "2.4.1"
 }
