--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+
+    dependencies {
+
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
+    }
+}
 plugins {
     id 'com.android.application' version '7.2.2' apply false
     id 'com.android.library' version '7.2.2' apply false
@@ -9,6 +16,8 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
+
+
 ext {
     androidXCoreVersion = "1.7.0"
     appCompatVersion = "1.5.0"
@@ -17,7 +26,7 @@ ext {
     fragmentKtxVersion = "2.5.1"
     navagitionUiKtxVersion = "2.5.1"
     retrofitVersion = "2.9.0"
-    retrofitGsonConverterVersion  = "2.9.0"
+    retrofitGsonConverterVersion = "2.9.0"
     junitVersion = "4.13.2"
     androixTestExtVersion = "1.1.3"
     androidXtestExpressoVersion = "3.4.0"
